public/stylesheets/sass/mixer2050/_scenarios_new.sass
body.mixer2050
  &#scenarios_new
    section#left
      width: 440px
      margin-right: 8px
      float: left
      section#questions
        width: auto
        @include shell_gradient_layer
        height: 430px
        overflow: auto
        nav#up
          @include shell_gradient_layer
        .question
          .info
            padding-left: 3px
            position: relative
            .information
              display: none
              position: absolute
              top: 30px
              left: 0
              @include shell_gradient_layer
              h3
                font-size: 13px
                font-weight: bold
                color: #0C3473
                margin-bottom: 10px
              .close_button
                float: right
      nav#down
        margin-top: 10px
        
        a
          color: #313131
          font-weight: bold
          margin: 15px
          &#previous_question
            float: left
          &#next_question
            float: right
    section#right
      float: left
      width: 440px
      section#user_chart
        float: left
        margin-right: 8px
      section#current_chart
        width: 68px
        float: left
        height: 432px
        @include shell_gradient_layer
    section#conflicts
      display: none
      clear: both
      padding: 15px 40px
      margin-top: 10px
      line-height: 20px
      text-align: left
      color: #000000
      @include shell_gradient_layer
      span.warning
        color: red
        font-weight: bold
        font-size: 1.1em

